--- a/Portfolio/homepage.css
+++ b/Portfolio/homepage.css
@@ -181,26 +181,11 @@ footer ul li {
   margin-right: 10px;
 }
 
-.social-icons {
-  margin-top: 20px;
+.fa {
+  font-size: 24px;
+  color: #333;
 }
 
-.social-icons a {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-  text-align: center;
-  line-height: 30px;
-  border-radius: 50%;
-  background-color: #000;
-  color: #fff;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.social-icons a:hover {
-  background-color: #666;
-}
 
 @media only screen and (max-width: 768px) {
   header {
@@ -244,9 +229,9 @@ footer ul li {
     font-size: 14px; /* Reduce font size of project content */
   }
 
-  .social-icons a {
-    width: 25px; /* Reduce size of social icons */
-    height: 25px;
-    line-height: 25px;
-  }
+  .fa {
+  font-size: 12px;
+  color: #333;
+}
+
 }
